--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                         <div class="card-body">
                             <img class="card-img" src="img/ooty.jpg" alt="Card image cap">
                             <div class="card-img-overlay" >
-                                <span style="background-color:#ffb404bd; font-size: 25px;">OOTY</span>
+                                <span style="background-color:#0000009f; color: #fff; font-size: 25px; font-weight: bold;">OOTY</span>
                             </div>            
                         </div> 
                     </div>         
@@ -263,7 +263,7 @@
                         <div class="card-body">
                             <img class="card-img" src="img/trichy.jpg" alt="Card image cap"> 
                             <div class="card-img-overlay" >
-                                <span style="background-color:#ffb404bd; font-size: 25px;">MADURAI</span>
+                                <span style="background-color:#0000009f; color: #fff; font-size: 25px; font-weight: bold;">MADURAI</span>
                             </div>            
                         </div> 
                         
@@ -274,7 +274,7 @@
                         <div class="card-body">
                             <img class="card-img" src="img/tanjavur.jpg" alt="Card image cap">
                             <div class="card-img-overlay" >
-                                <span style="background-color:#ffb404bd; font-size: 25px;">THANJAVUR</span>
+                                <span style="background-color:#0000009f; color: #fff; font-size: 25px; font-weight: bold;">THANJAVUR</span>
                             </div>                 
                         </div> 
                     </div>         
@@ -311,7 +311,7 @@
             </div>
             <div class="col-lg-3 col-md-3 col-sm-12">
                 <!-- <input type="button" id="getquote" value="CONTACT US" class="open-button" onclick="openForm()">  -->
-                <i class="far fa-building" style="height:35px; width:35px; color:rgb(255, 174, 0)"></i><span style="font-size: 25px; color:rgb(255, 174, 0); font-weight: bold;">R.R</span><br><span style="font-size: 25px; color: #efefef; font-weight: bold;"> REAL ESTATES</span> 
+                <i class="far fa-building" style="height:25px; width:25px; color:rgb(255, 174, 0)"></i><span style="font-size: 20px; color:rgb(255, 174, 0); font-weight: bold;">R.R</span><span style="font-size: 20px; color: #efefef; font-weight: bold;"> REAL ESTATES</span> 
             </div>
             
             <div class="form-popup text-center" id="myForm">
