--- a/index.html
+++ b/index.html
@@ -88,18 +88,18 @@
                 <div class="col-lg-3 col-md-6 col-sm-12">
                         <div class="card float-left">
                             <div class="card-body">
-                                <i class="fas fa-laptop-code" style="height: 45px;width: 45px; color: rgb(255, 174, 0); text-align: left;"></i>
+                                <i class="fas fa-home" style="height: 45px;width: 45px; color: rgb(255, 174, 0); text-align: left;"></i>
                                 <h5>Finds Your Dream Home</h5>
-                                <p>Get yourself and your business an identity with responsive websites.</p>
+                                <p>Dummy text Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                         </div>
                     </div>
                 </div>
                    <div class="col-lg-3 col-md-6 col-sm-12">
                         <div class="card float-left">
                             <div class="card-body ">
-                                <i class="fas fa-mobile-alt" style="height: 45px;width: 45px; color: rgb(255, 174, 0); text-align: left;"></i>
+                                <i class="fas fa-lock" style="height: 45px;width: 45px; color: rgb(255, 174, 0); text-align: left;"></i>
                                 <h5>Securing the property</h5>
-                                <p> We create professional Android and iOS application.</p>
+                                <p>Dummy text Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                              </div>
                         </div>
                     </div>
@@ -110,16 +110,16 @@
                     <div class="card-body">
                             <i class="fas fa-hat-wizard" style="height: 45px;width: 45px; color: rgb(255, 174, 0); text-align: left;"></i>
                         <h5>Providing legal support</h5>
-                        <p>Revamp your existing website and apps with latest trending designs.</p>
+                        <p>Dummy text Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                     </div>
                 </div>
             </div> 
             <div class="col-lg-3 col-md-6 col-sm-12">
                     <div class="card float-left">
                         <div class="card-body">
-                                <i class="fas fa-hat-wizard" style="height: 45px;width: 45px; color: rgb(255, 174, 0); text-align: left;"></i>
-                            <h5>Providing legal support</h5>
-                            <p>Revamp your existing website and apps with latest trending designs.</p>
+                                <i class="fas fa-chair" style="height: 45px;width: 45px; color: rgb(255, 174, 0); text-align: left;"></i>
+                            <h5>Furnishing the property</h5>
+                            <p>Dummy text Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                         </div>
                     </div>
                 </div>
